<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">YouApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_message">Hi and welcome to the YouMeIBD matching platform where you can find people that are like you, by simply answering and posting questions. \nHave fun!</string>
    <string name="login_mail_hint">E-Mail</string>
    <string name="login_pass_hint">Password</string>
    <string name="login_button_text">Log in with Facebook</string>
    <string name="login_mail_label">User</string>
    <string name="login_password_label">Password</string>
    <string name="reg_name_label">Name*</string>
    <string name="reg_box_name_hint">Name</string>
	<string name="reg_email_label">E-Mail*</string>
	<string name="reg_box_email_hint">E-Mail</string>
	<string name="reg_birthday_label">Birthday*</string>
	<string name="reg_box_birthday_hint">mm/dd/yyyy</string>
	<string name="reg_country_label">Country*</string>
	<string name="reg_city_label">City</string>
	<string name="reg_box_city_hint">City</string>
	<string name="reg_box_plz_hint">PLZ</string>
	
	<string-array name="reg_countries_array">
        <item>Germany</item>
        <item>Switzerland</item>
        <item>United States</item>
        <item>Italy</item>
        <item>Spain</item>
        <item>Portugal</item>
        <item>Poland</item>
        <item>Denmark</item>
        <item>Norway</item>
        <item>Finland</item>
    </string-array>
	
	<string name="reg_symptoms_label">Symptoms</string>
	<string name="reg_box_symptoms_hint">Click "+" to add</string>
	<string name="reg_medicine_label">Medication</string>
	<string name="reg_box_medicine_hint">Click "+" to add</string>
	<string name="reg_nickname_label">Nickname</string>
	<string name="reg_box_nickname_hint">Nickname</string>
	<string name="reg_toc_label">I have read and agree with the <a href="https://www.youtube.com/watch?v=jxVcgDMBU94">terms and conditions</a></string>
	<string name="reg_reg_label">Register</string>
	<string name="login_regbutton_text">Register via facebook</string>	
	<string name="profile_toggle_profile_text">Profile</string>
	<string name="profile_toggle_soulmate_text">Soulmates</string>
	<string name="reg_profile_label">Profile</string>
	<string name="profcontent_label_text">How do you feel?</string>
	<string name="profcontent_feelbox_hint">Post your mood here</string>
	<string name="profcontent_button_submit">submit</string>
	<string name="profcontent_edit_label">Edit your profile</string>
	<string name="footer_pp_label"><a href="https://app.dev.galaxyadvisors.com/YouApp/home/termsofuse.html">privacy policy</a></string>
	<string name="footer_about_label"><a href="https://app.dev.galaxyadvisors.com/YouApp/home/about.html">about</a></string>
	<string name="footer_help_label"><a href="http://improvecarenowblog.org/2012/12/07/youmeibd/">help</a></string>
	<string name="profcontent_info_label">Personal information</string>
	<string name="profcontent_info_content">Info here</string>
	<string name="profcontent_symptoms_content">Symptoms here</string>
	<string name="profcontent_symptoms_label">Symptoms</string>
	<string name="profcontent_medication_label">Medication</string>
	<string name="profcontent_medication_content">Medication here</string>
	<string name="profile">Your profile</string>
	<string name="chat">Messages</string>
	<string name="question">Questions</string>
	<string name="soulmate_find_label">Find</string>
	<string name="soulmate_search_hint">Soulmate</string>
	<string name="conf_thx4reg">Thank you for your registration!</string>
	<string name="conf_plsConf">Please confirm your e-mail address.</string>
	<string name="conf_b2login"><a href="https://www.youtube.com/watch?v=jxVcgDMBU94"> Back to Login </a></string>
	<string name="conf_logoGross">Big Logo</string>
	<string name="conf_profile_label">Confirmation Screen</string>
	<string name="chat_message_label_text">Messages</string>
	<string name="qa_toggle_postquestion_text">Post Questions</string>
	<string name="qa_toggle_answerquestion_text">Answer Questions</string>
	<string name="answerquestions_message_label_text">Answer Questions</string>
	<string name="postquestions_message_label_text">Post Question</string>
	<string name="postquestions_etext_question_hint">Question</string>
	<string name="postquestions_option_label_text">Options</string>
	<string name="postquestions_etext_option_hint">Option</string>
	<string name="postquestions_moreoptions_button_text">Add Option</string>
	<string name="postquestions_ok_button_text">OK</string>
	<string name="postquestions_reset_button_text">Reset</string>
	<string name="reg_pers_info_label">Personal Information</string>
	<string name="add_symptoms_hint">Symptom</string>
	<string name="add_medicine_hint">Medicine</string>
	<string name="answerquestions_ok_button_text">OK</string>
	<string name="answerquestions_skip_button_text">Skip</string>
	<string name="answerquestion_rating_label">Importance</string>
	<string name="answerquestion_rating_low">Low</string>
	<string name="answerquestion_rating_high">High</string>
	<string name="answerquestions_my_answers_label">My Answers</string>
	<string name="addsymptomscd">Button to add symptoms.</string>
	<string name="addmedicinecd">Button to add medication</string>
	<string name="removeanswerfromlist">removeAnswerFromList</string>
	<string name="medication_delete">Medication delete</string>
	<string name="exlist_prof_child">Child of ExpandableList for profile</string>
	<string name="symptom_delete">Symptom delete</string>
	<string name="remove_mate">delete Soulmate</string>
	<string name="deletemedicine">deleteMedicine</string>
	<string name="editprofile_name">Name: </string>
	<string name="editprofile_origin">Origin: </string>
	<string name="editprofile_gender">Gender: </string>
	<string name="editprofile_birthday">Birthday:</string>
	<string name="editprofile_mail">E-Mail: </string>
	<string name="editprofile_mailVisible">E-Mail visible: </string>
	<string name="app_id">157796167619145</string>
</resources>
