<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
<!--     <ScrollView -->
<!--         android:layout_width="match_parent" -->
<!--         android:layout_height="wrap_content"  -->
<!--         > -->
    <TextView
        android:id="@+id/reg_label_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_message" />

	<TextView
		style="@style/myOwnTextFieldStyle"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/reg_pers_info_label"
	/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                 >

                <TextView
                    android:id="@+id/reg_label_name"
                    android:layout_width="0dip"
                    android:layout_weight="0.25"
                    android:layout_height="wrap_content"
                    android:text="@string/reg_name_label" />

                <EditText
                    android:id="@+id/reg_box_name"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.75"
                    android:hint="@string/reg_box_name_hint"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                 >

                <TextView
                    android:id="@+id/reg_label_email"
                    android:layout_width="0dip"
                    android:layout_weight="0.25"
                    android:layout_height="wrap_content"
                    android:text="@string/reg_email_label" />

                <EditText
                    android:id="@+id/reg_box_email"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.75"
                    android:hint="@string/reg_box_email_hint"
                    android:inputType="textEmailAddress"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                 >

                <TextView
                    android:id="@+id/reg_label_nickname"
                    android:text="@string/reg_nickname_label"
                    android:layout_width="0dip"
                    android:layout_weight="0.25"
                    android:layout_height="wrap_content"
                     />

                <EditText
                    android:id="@+id/reg_box_nickname"
                    android:layout_width="0dip"
                    android:layout_weight="0.75"
                    android:layout_height="wrap_content"
                    android:hint="@string/reg_box_nickname_hint"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                 >

                <TextView
                    android:id="@+id/reg_label_birthday"
                    android:text="@string/reg_birthday_label"
                    android:layout_width="0dip"
                    android:layout_weight="0.25"
                    android:layout_height="wrap_content" 
                    />

                <EditText
                    android:id="@+id/reg_box_birthday"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.75"
                    android:hint="@string/reg_box_birthday_hint"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                 >

                <TextView
                    android:id="@+id/reg_label_country"
                    android:text="@string/reg_country_label"
                    android:layout_width="0dip"
                    android:layout_weight="0.25"
                    android:layout_height="wrap_content"
                    />

                <Spinner
                    android:id="@+id/reg_box_country"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.75" />
            </LinearLayout>

            <!-- Muss je nach Country noch angepasst werden -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                 >

                <TextView
                    android:id="@+id/reg_label_city"
                    android:text="@string/reg_city_label"
                    android:layout_width="0dip"
                    android:layout_weight="0.25"
                    android:layout_height="wrap_content" 
                    />

                <EditText
                    android:id="@+id/reg_box_plz"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:hint="@string/reg_box_plz_hint"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/reg_box_city"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:hint="@string/reg_box_city_hint"
                    android:singleLine="true" />
            </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            style="@style/myOwnTextFieldStyle"
            android:id="@+id/reg_symptoms_text"
            android:layout_width="0dip"
            android:layout_height="24dp"
            android:layout_weight="0.9"
            android:text="@string/reg_symptoms_label" >
        </TextView>

        <ImageButton
            android:id="@+id/reg_add_symptoms_button"
            android:layout_width="0dip"
            android:layout_height="24dp"
            android:layout_weight="0.1"
            android:src="@drawable/plus_24"
            android:background="@color/special_green"
            android:contentDescription="@string/addsymptomscd"/>
    </LinearLayout>

    <ListView
        android:id="@+id/reg_list_symptoms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            style="@style/myOwnTextFieldStyle"
            android:id="@+id/reg_medicine_text"
            android:layout_width="0dip"
            android:layout_height="24dp"
            android:layout_weight="0.9"
            android:text="@string/reg_medicine_label" >
        </TextView>

        <ImageButton
            android:id="@+id/reg_add_medicine_button"
            android:layout_width="0dip"
            android:layout_height="24dp"
            android:layout_weight="0.1"
            android:src="@drawable/plus_24"
            android:background="@color/special_green" 
            android:contentDescription="@string/addmedicinecd"/>
    </LinearLayout>

    <ListView
        android:id="@+id/reg_list_medicines"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    </ListView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/reg_cbox_toc"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="0.25" />

        <TextView
            android:id="@+id/reg_label_cbox"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:text="@string/reg_toc_label" />
    </LinearLayout>

    <Button
        android:id="@+id/reg_button_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reg_reg_label" />
</LinearLayout>