<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >
    
	<TextView
	    android:id="@+id/footer_privacy_policy"
		android:layout_width="0dip"
    	android:layout_height="wrap_content"
    	android:layout_weight="0.33"
    	android:text="@string/footer_pp_label"
    	android:gravity="center"
	    />
	
	<TextView
	    android:id="@+id/footer_about"
		android:layout_width="0dip"
    	android:layout_height="wrap_content"
    	android:layout_weight="0.33" 
    	android:text="@string/footer_about_label"
    	android:gravity="center"
	    />
	
	<TextView
	    android:id="@+id/footer_help"
		android:layout_width="0dip"
    	android:layout_height="wrap_content"
    	android:layout_weight="0.33" 
    	android:text="@string/footer_help_label"
    	android:gravity="center"
	    />
</LinearLayout>
